fixed footer overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2685,6 +2685,11 @@ body.dark-mode {
   right: 14px;
   top: -16px;
 }
+.icons{
+  width: 400px;
+    flex-wrap: wrap;
+    align-items: center;
+}
 
 /**
 * Dark Mode
